--- a/Areas/Patient/Views/Shared/_PatientLayout.cshtml
+++ b/Areas/Patient/Views/Shared/_PatientLayout.cshtml
@@ -92,7 +92,7 @@
             <li>
                 <a href="#" class="nav-link" data-url="@Url.Action("Index", "Billing", new { area = "Patient" })">
                     <i class="bi bi-file-text"></i>
-                    <span>Billing & Prescriptions</span>
+                    <span>Billing</span>
                 </a>
             </li>
             <li>
